--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     // 🧠 The person also has an `ageGracefully` method, which increases `age` by 1 each time it's called.
     // 🧠 But there's a catch: once `age` reaches 12, the `ageGracefully` method will have no effect.
     class PeterPan {
+      constructor(desiredName) {
+        this.name = desoredName
+      }
 
     }
 
