--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
     // 🧠 But there's a catch: once `age` reaches 12, the `ageGracefully` method will have no effect.
     class PeterPan {
       constructor(desiredName) {
-        this.name = desoredName
+        this.name = desiredName
+        this.age = 0
       }
-
+      ageGracefully () {
+        if (this.age <12) {
+          this.age++
+        }
+      }
     }
 
     // 👉 CHALLENGE 2
@@ -41,8 +46,25 @@
     // 🧠 Calling `down` changes the `altitude` prop appropriately and returns the updated `altitude`.
     // 🧠 If calling `down` would cause the plane to go below altitude zero, `altitude` is set to 0 and the string "CRASH!" is returned.
     class AirPlane {
+      constructor(planeModel) {
+        this.model = planeModel
+        this.altitude = 0
+      }
+      up (meters) {
+        this.altitude += meters
+        return this.altitude
+      }
+
+      down(meters) {
+        if (this.altitude >= meters){
+        this.altitude -= meters 
+        return this.altitude
+      }
+      this.altitude = 0
+      return "CRASH!"
 
     }
+  }
 
     // 👉 CHALLENGE 3
     // 🧠 Build a Bulb class.
@@ -51,6 +73,24 @@
     // 🧠 The methods work as one might expect, changing the value of `isOn` to the appropriate Boolean.
     // 🧠 The methods also return one of these two strings: "You turned the bulb ON", or "You turned the bulb OFF".
     class Bulb {
+      isOn = false
+      turnOn() {
+        this.isOn = true
+        return "You turned the bulb ON"
+      }
+
+      turnOff() {
+        this.isOn = false  
+        return "You turned the bulb OFF"
+      }
+
+      toggle() {
+        this.isOn = !this.isOn
+        if (this.isOn) {
+          return "You turned the bulb ON"
+        }
+        return "You turned the bulb OFF"
+      }
 
     }
 
@@ -69,8 +109,20 @@
     //   minusThree.count() // returns null
     //   minusThree.count() // returns null
     class CountDown {
-
+      constructor(num) {
+        this.currentNum = num  
+      }
+      count () {
+        if(this.currentNum >=1) {
+        return `${this.currentNum--}!`  
+      } else if (this.currentNum === 0) {
+        this.currentNum--
+        return "Liftoff!"
+      }else {
+        return null
+      }
     }
+  }
 
     // 🧪 TESTS, do not work below this line
     // 🧪 TESTS, do not work below this line
